--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1322,6 +1322,10 @@ select {
   background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
 }
 
+button.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+}
 
 .bg-emerald-200	{
   --tw-bg-opacity: 1;
@@ -1336,6 +1340,11 @@ select {
 .bg-emerald-400	{
   --tw-bg-opacity: 1;
   background-color: rgb(52 211 153);
+}
+
+button.bg-emerald-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
 }
 
 .bg-red-400 {
