--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -1,7 +1,7 @@
 /* Container */
 .flex-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
   background-size: cover;
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-left: 18rem;
 }
 
 /* Title */
