--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -1,7 +1,7 @@
 /* Container */
 .flex-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100vh;
   background-size: cover;
@@ -18,7 +18,6 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-left: 18rem;
 }
 
 /* Title */
